--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 </head>
 
 <body>
-    
+   <h1>Weather Dashboard</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-3 col-x1-3 colOne">
+                <p>Search for a City:</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
