--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         <div class="row">
             <div class="col-12 col-md-3 col-x1-3 colOne">
                 <p>Search for a City:</p>
+
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control textVal" placeholder="Atlanta">
+                    <div class="input-group-append btnPar"></div>
+                    <div class="container cityHist"></div>
+                    
+                </div>
             </div>
         </div>
     </div>
