--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
                 <div class="input-group mb-3">
                     <input type="text" class="form-control textVal" placeholder="Atlanta">
                     <div class="input-group-append btnPar"></div>
+                        <button class="btn btn-primary search" type="button" id="button-addon2"><i class="fas fa-search"></i></button>
+                        
                     <div class="container cityHist"></div>
-                    
+
                 </div>
             </div>
         </div>
