--- a/index.html
+++ b/index.html
@@ -16,17 +16,20 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-3 col-x1-3 colOne">
-                <p>Search for a City:</p>
+                <header>Search for a City:</header>
 
                 <div class="input-group mb-3">
                     <input type="text" class="form-control textVal" placeholder="Atlanta">
                     <div class="input-group-append btnPar"></div>
                         <button class="btn btn-primary search" type="button" id="button-addon2"><i class="fas fa-search"></i></button>
-                        
-                    <div class="container cityHist"></div>
-
+                    
                 </div>
+                    <div class="container cityHist"></div>
             </div>
+
+                <div class="col-12 col-md-9 col-x1-9 colTwo">
+                    <div class="row today"></div>
+                </div>
         </div>
     </div>
 </body>
