--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <h1>Weather Dashboard</h1>
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-3 col-x1-3 colOne">
+            <div class="col-12 col-md-3 col-x1-3 colUno">
                 <header>Search for a City:</header>
 
                 <div class="input-group mb-3">
@@ -27,7 +27,7 @@
                     <div class="container cityHist"></div>
             </div>
 
-                <div class="col-12 col-md-9 col-x1-9 colTwo">
+                <div class="col-12 col-md-9 col-x1-9 colDos">
                     <div class="row today">
                         <div class="card bg-light mb-3" style="max-width: 400px;">
                             <h2 class="card-header cardTodayCityName"></h2>
@@ -42,6 +42,6 @@
         <div class="row fiveForecast"></div>
     </div>
 
-    
+   
 </body>
 </html>
